@startuml TalentConnect_Class_Diagram
!theme plain

' Title and header
title TalentConnect - Class Diagram\nTalent Management System
note top : "Version 1.2.0 - May 2025\nLaravel-based Talent Matching Platform"

' Define model classes
package "Models" {
    class User {
        +id: int
        +name: string
        +email: string
        +password: string
        +phone_number: string
        +domicile_country: string
        +domicile_city: string
        +email_verified_at: datetime
        +remember_token: string
        +created_at: timestamp
        +updated_at: timestamp
        --
        +initials(): string
        +hasRole(roleName: string): bool
        --
        +competencies(): BelongsToMany
        +createdRequests(): HasMany
        +assignedRequests(): BelongsToMany
        +roles(): BelongsToMany
    }

    class Role {
        +id: int
        +name: string
        +created_at: timestamp
        +updated_at: timestamp
        --
        +users(): BelongsToMany
    }

    class TalentRequest {
        +id: int
        +user_id: int
        +details: text
        +status: enum
        +required_competencies: json
        +work_location_type: enum
        +work_location_country: string
        +work_location_city: string
        +veto_threshold: int
        +created_at: timestamp
        +updated_at: timestamp
        --
        +requestingUser(): BelongsTo
        +assignedTalents(): BelongsToMany
        +competencies(): BelongsToMany
    }

    class Competency {
        +id: int
        +name: string
        +description: text
        +created_at: timestamp
        +updated_at: timestamp
        --
        +users(): BelongsToMany
        +talentRequests(): BelongsToMany
    }

    class CompetencyTalentRequest {
        +competency_id: int
        +talent_request_id: int
        +required_proficiency_level: int
        +weight: decimal
        +is_critical: boolean
        +veto_threshold: int
        +created_at: timestamp
        +updated_at: timestamp
    }
}

package "Services" {
    class EnhancedDecisionSupportService {
        +MAX_SINGLE_WEIGHT_PERCENTAGE: float {static} = 1.0
        +COMPETENCY_WEIGHT_PERCENTAGE: float {static} = 0.85
        +LOCATION_WEIGHT_PERCENTAGE: float {static} = 0.15
        +MIN_PROFICIENCY_LEVEL: int {static} = 1
        +MAX_PROFICIENCY_LEVEL: int {static} = 5
        +VETO_THRESHOLD_PERCENTAGE: float {static} = 0.8
        +MIN_CONFIDENCE_SCORE: float {static} = 0.6
        --
        +findAndRankTalents(request: TalentRequest, limit: int): Collection
        +calculateBasicSAWScores(request: TalentRequest, limit: int): Collection
        -extractRequiredCompetencies(request: TalentRequest): Collection
        -validateWeightDistribution(weights: array): void
        -normalizeWeights(competencies: Collection): Collection
        -filterQualifiedTalents(competencies: Collection, request: TalentRequest): Collection
        -normalizePerformanceValues(talents: Collection, competencies: Collection): array
        -calculateEnhancedSAWScores(talents: Collection, competencies: Collection, request: TalentRequest): Collection
        -calculateNormalizedLocationScore(talent: User, request: TalentRequest): float
        -calculateLocationCompatibility(talent: User, request: TalentRequest): float
        -calculateConfidenceScore(talent: User, competencies: Collection): float
        -calculateConfidenceFactors(talent: User, competencies: Collection): array
        -calculateSensitivityScoresForTalent(talent: User, competencies: Collection, talents: Collection): array
        -calculateVariance(values: array): float
        +getMethodologyExplanation(): array
    }

    class DecisionSupportService {
        +MAX_SINGLE_WEIGHT_PERCENTAGE: float {static} = 0.8
        --
        +findAndRankTalents(request: TalentRequest, limit: int): Collection
        -normalizeWeights(competencies: Collection): Collection
        -calculateSAWScores(talents: Collection, competencies: Collection): Collection
        -calculateLocationScore(talent: User, request: TalentRequest): float
        +getMethodologyDescription(): array
    }

    class DecisionSupportService_SAW_Compliant {
        --
        +findAndRankTalents(request: TalentRequest, limit: int): Collection
        -normalizeWeights(competencies: Collection): Collection
        -calculateSAWScores(talents: Collection, competencies: Collection): Collection
        +getMethodologyDescription(): array
    }
}

package "Controllers" {
    class TalentRequestController {
        +index(): View
        +create(): View
        +createDirect(talent: User): View
        +store(request: TalentRequestRequest): RedirectResponse
        +storeDirect(request: Request, talent: User): RedirectResponse
        +show(talentRequest: TalentRequest): View
        +enhancedResults(talentRequest: TalentRequest): View
        +destroy(talentRequest: TalentRequest): RedirectResponse
    }

    class AdminTalentRequestController {
        +index(): View
        +show(talentRequest: TalentRequest): View
        +assign(request: Request, talentRequest: TalentRequest): RedirectResponse
        +reject(talentRequest: TalentRequest): RedirectResponse
        +complete(talentRequest: TalentRequest): RedirectResponse
        +enhancedResults(talentRequest: TalentRequest): View
        +exportResults(talentRequest: TalentRequest): Response
    }

    class TalentController {
        +index(): View
        +show(talent: User): View
        +search(request: Request): View
        +requestTalent(talent: User): View
    }
}

package "Requests" {
    class TalentRequestRequest {
        +authorize(): bool
        +rules(): array
        +messages(): array
        +validated(): array
    }
}

' Define pivot tables as associations
class "role_user" as RoleUser {
    +user_id: int
    +role_id: int
    +created_at: timestamp
    +updated_at: timestamp
}

class "competency_user" as CompetencyUser {
    +user_id: int
    +competency_id: int
    +proficiency_level: int
    +created_at: timestamp
    +updated_at: timestamp
}

class "talent_request_assignments" as TalentRequestAssignments {
    +talent_request_id: int
    +user_id: int
    +status: enum
    +assignment_type: enum
    +assigned_by: int
    +created_at: timestamp
    +updated_at: timestamp
}

' Define relationships
User ||--o{ TalentRequest : "creates"
User ||--o{ TalentRequestAssignments : "assigned to"
TalentRequest ||--o{ TalentRequestAssignments : "has assignments"
TalentRequest ||--o{ CompetencyTalentRequest : "requires"
Competency ||--o{ CompetencyTalentRequest : "used in"
Competency ||--o{ CompetencyUser : "possessed by"
User ||--o{ CompetencyUser : "has competencies"
User ||--o{ RoleUser : "has roles"
Role ||--o{ RoleUser : "assigned to"

' Service dependencies and usage
TalentRequestController ..> EnhancedDecisionSupportService : "uses Enhanced DSS"
AdminTalentRequestController ..> EnhancedDecisionSupportService : "uses Enhanced DSS"
TalentRequestController ..> DecisionSupportService : "uses Basic DSS"
AdminTalentRequestController ..> DecisionSupportService : "uses Basic DSS"
TalentRequestController ..> TalentRequestRequest : "validates with"
TalentController ..> EnhancedDecisionSupportService : "uses for search"

' Alternative service relationships
EnhancedDecisionSupportService ..> DecisionSupportService : "extends functionality"
DecisionSupportService_SAW_Compliant ..> DecisionSupportService : "SAW compliance variant"

' Model relationships (detailed)
User::competencies --> CompetencyUser
User::roles --> RoleUser
User::createdRequests --> TalentRequest
User::assignedRequests --> TalentRequestAssignments
TalentRequest::competencies --> CompetencyTalentRequest
TalentRequest::assignedTalents --> TalentRequestAssignments
Competency::users --> CompetencyUser
Competency::talentRequests --> CompetencyTalentRequest

note right of EnhancedDecisionSupportService
  **Enhanced SAW Algorithm Implementation**

  Critical Features:
  - Veto threshold system (60-100% configurable)
  - Critical competency bonuses (up to 20%)
  - Location intelligence scoring (15% weight)
  - Mathematical SAW compliance
  - Min-max normalization with edge case handling
  - Confidence scoring and sensitivity analysis

  Formula: Final_Score = (Competency_Score × 0.85) + (Location_Score × 0.15)

  Standards: Complies with international MCDM/SAW standards
end note

note bottom of TalentRequest
  Status values:
  - pending_admin (awaiting admin review)
  - pending_talent (awaiting talent response)
  - approved (talent assignment confirmed)
  - rejected (rejected by admin or talent)
  - completed (project completed)

  Work location types:
  - on_site (requires physical presence)
  - remote (fully remote work)
  - hybrid (combination of on-site and remote)
end note

note bottom of CompetencyTalentRequest
  Enhanced pivot table with critical competency support:

  - Weight values: 0.0 - 100.0 (percentage weights)
  - Proficiency levels: 1-5 (skill assessment scale)
  - is_critical: Boolean flag for veto threshold application
  - veto_threshold: 60-100% (configurable elimination threshold)

  Business Rules:
  - Maximum 70% of competencies can be marked as critical
  - Veto threshold eliminates talents below percentage of required level
  - Critical competencies receive progressive bonus (up to 20%)
end note

@enduml
